# Drone_Assignment_Simulator

./: .gitignore  .pre-commit-config.yaml  IMPLEMENTATION.md  README.md  pyproject.toml  requirements.txt  setup.py  test.ipynb  test.py  test2.py  test2_refactored.py
Real_Result/: result.md
app/: config.py  main.py  types.py  unit.py
app/energy/: __init__.py  battery.py  unit.py
app/geo/: __init__.py  coordinate.py  geo_point.py
app/mission/: __init__.py  task.py  task_delivery.py
app/state/: __init__.py  state_machine.py
app/timer/: __init__.py  timer.py
app/unit/: __init__.py  unit_angle.py  unit_base.py  unit_distance.py  unit_float.py  unit_power.py  unit_time.py  unit_velocity.py
app/vehicles/: __init__.py  drone.py  drone_delivery.py  vehicle.py
drone_simulator/: __init__.py  analyzer.py  models.py  problem.py  strategies.py
dronesim/: __init__.py
dronesim/energy/: __init__.py  battery.py  unit.py
dronesim/geo/: __init__.py  geo_point.py
dronesim/mission/: __init__.py  task.py  task_delivery.py
dronesim/simulator/: __init__.py  analyze.py  analyze_updated.py  simulator.py  threaded_simulator.py  threading_examples.py
dronesim/state/: state_machine.py
dronesim/timer/: __init__.py  timer.py
dronesim/unit/: __init__.py  unit_float.py  unit_power.py  unit_time.py
dronesim/vehicles/: __init__.py  drone.py  drone_delivery.py  drone_delivery.py.bak.1762586944  vehicle.py
example/: Assignments_Sim (1).ipynb  Assignments_Sim.ipynb  Common.py  Config.py  Improved_MILP_Strategy.ipynb  Optimal_Distance_Strategy.ipynb  Sample_Submission.csv  Single_Delivery_MILP_Strategy.ipynb  sim.py  test.csv  test.ipynb
examples/: basic_example.py  comparison_example.py  custom_problem_example.py  milp_example.py
tests/: __init__.py  test_analyzer.py  test_models.py  test_strategies.py
드론 배달 결과/: 결과 분석.md
